attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -11,7 +11,7 @@
     // @include fullviewPort();
     height: 100vh;
     width: 100vw;
-    position: sticky;
+    position: fixed;
     padding:0;
     margin:0;
     top:0;
